--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Yurong Jiang"
-  avatar           : "me.png"
+  avatar           : "me.jpg"
   bio              : "a Laker fan"
   location         : 
   employer         :
